# VulkanEngine

./: .clang-format  .editorconfig  CMakeLists.txt
cmake/: Shaders.cmake
shaders/: basic.frag  basic.vert  common.glsl
src/: glfw_initialization.cpp  glfw_initialization.h  glfw_monitor.cpp  glfw_monitor.h  glfw_window.cpp  glfw_window.h  graphics.cpp  graphics.h  main.cpp  precomp.h  utilities.cpp  utilities.h
